crates/vespertide-exporter/src/seaorm/snapshots/vespertide_exporter__seaorm__tests__render_entity_snapshots@params_pk_and_fk_together.snap
---
source: crates/vespertide-exporter/src/seaorm/mod.rs
expression: rendered
---
use sea_orm::entity::prelude::*;

#[sea_orm::model]
#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel)]
#[sea_orm(table_name = "article_user")]
pub struct Model {
    #[sea_orm(primary_key)]
    pub article_id: Uuid,
    #[sea_orm(primary_key)]
    pub user_id: Uuid,
    #[sea_orm(default_value = 1)]
    pub author_order: i32,
    #[sea_orm(default_value = "contributor")]
    pub role: String,
    #[sea_orm(default_value = false)]
    pub is_lead: bool,
    #[sea_orm(default_value = "now()")]
    pub created_at: DateTimeWithTimeZone,
    #[sea_orm(belongs_to, from = "article_id", to = "id")]
    pub article: HasOne<super::article::Entity>,
    #[sea_orm(belongs_to, from = "user_id", to = "id")]
    pub user: HasOne<super::user::Entity>,
}

// Index definitions (SeaORM uses Statement builders externally)
// (unnamed) on [article_id]
// (unnamed) on [user_id]
vespera::schema_type!(Schema from Model, name = "ArticleUserSchema");
impl ActiveModelBehavior for ActiveModel {}
