crates/vespertide-exporter/src/seaorm/snapshots/vespertide_exporter__seaorm__tests__render_entity_with_schema_snapshots@schema_composite_fk_parent.snap
---
source: crates/vespertide-exporter/src/seaorm/mod.rs
expression: rendered
---
use sea_orm::entity::prelude::*;
use serde::{Deserialize, Serialize};

#[sea_orm::model]
#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel, Serialize, Deserialize)]
#[serde(rename_all = "camelCase")]
#[sea_orm(table_name = "parent")]
pub struct Model {
    #[sea_orm(primary_key, auto_increment = false)]
    pub id1: i32,
    #[sea_orm(primary_key, auto_increment = false)]
    pub id2: i32,
    #[sea_orm(has_one)]
    pub child_one: HasOne<super::child_one::Entity>,
    #[sea_orm(has_many)]
    pub child_manies: HasMany<super::child_many::Entity>,
}

impl ActiveModelBehavior for ActiveModel {}
