crates/vespertide-exporter/src/seaorm/snapshots/vespertide_exporter__seaorm__tests__render_entity_with_schema_snapshots@schema_many_to_many_missing_target.snap
---
source: crates/vespertide-exporter/src/seaorm/mod.rs
expression: rendered
---
use sea_orm::entity::prelude::*;
use serde::{Deserialize, Serialize};

#[sea_orm::model]
#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel, Serialize, Deserialize)]
#[sea_orm(table_name = "article")]
pub struct Model {
    #[sea_orm(primary_key)]
    pub id: i64,
    #[sea_orm(has_many)]
    pub article_users: HasMany<super::article_user::Entity>,
}

impl ActiveModelBehavior for ActiveModel {}
